kubernetes/prod/us-west-2/monitoring/26-grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx-monitoring
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.infra.iam.mozilla.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
  tls:
  - hosts:
    - grafana.infra.iam.mozilla.com
    secretName: grafana-cert-secret
